# rsm

./: README.md
nn/: fall.h5  model.h5  nn.py
nn/bk/: dist.h5  nn copy.py  nn.py
nn/env/: pyvenv.cfg
rgame/: Cargo.toml  history copy 2.json  history copy.json  history.json  history_.json  history_101.json  history__.json  history___.json  history____.json  history_____.json  history______.json  history_______.json  history________.json  history_________.json  history__________.json  history___________.json  history_gold.json  settings copy 10.json  settings copy 11.json  settings copy 2.json  settings copy 3.json  settings copy 4.json  settings copy 5.json  settings copy 7.json  settings copy 8.json  settings copy 9.json  settings copy.json  settings copy_gr.json  settings.json  settings_bkup.json  settings_godmode.json  settings_good.json  settings_loss.json  settings_met.json  trainer copy 3.json  trainer copy 5.json  trainer copy 6.json  trainer copy 7.json  trainer copy 8.json  trainer copy.json  (+4 more)
rgame/src/: auto.rs  main.rs  motion.rs  numread.rs  video.rs
rlt/: ._rlt.xcodeproj
rlt/rlt/: ._ContentView.swift  ._rltApp.swift  ContentView.swift  rltApp.swift
rlt/rlt.xcodeproj/: project.pbxproj
rlt/rlt.xcodeproj/project.xcworkspace/xcuserdata/brodieknight.xcuserdatad/: UserInterfaceState.xcuserstate
rlt/rlt.xcodeproj/xcuserdata/brodieknight.xcuserdatad/xcschemes/: xcschememanagement.plist
spindle/: Cargo.toml
spindle/src/: bb.rs  board.rs  game.rs  lib.rs  ml.rs  nn.rs  sim.rs  ssa.rs
