[package]
name = "rgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
spindle = { path = "../spindle" }
bevy-debug-text-overlay = "7.0.0"
autopilot = "0.4.0"
device_query = "1.1.3"
serde = "1.0.194"
serde_json = "1.0.111"
image = "0.22.4"
nalgebra={version="0.32.3"}
opencv = {version ="0.92.2", features = ["imgproc", "clang-runtime"]}
scrap = "0.5.0"
rodio = "0.19.0"
tesseract = { version="0.15.1"}
enigo = "0.2.1"
