[package]
name = "spindle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
varpro="0.7.1"
nalgebra="0.32.3"
num-traits = "0.2.17"
ndarray = "0.16.0"
ndarray-rand = "0.15.0"
rand = "0.8.5"
plotters = "0.3"
serde = {version = "1.0.208", features = ["derive"]}
splines = { version = "4.3.1", features = ["serde"] }
